Done: 3 pages, executing vkfencoder.xmlImport, show filesforencoder

--- a/vkfDjango/templates/encoder/choiceFileFor.html
+++ b/vkfDjango/templates/encoder/choiceFileFor.html
@@ -12,7 +12,7 @@
     </form>
     <br>
     <br>
-    <form action = "#" enctype="multipart/form-data" method="post">
+    <form action = "{% url 'encoder:list_filesFor' %}" enctype="multipart/form-data" method="post">
         {% csrf_token %}
         <button type="submit">Посмотреть последние файлы</button>
     </form>
