--- a/vkfDjango/apps/encoder/static/css/style.css
+++ b/vkfDjango/apps/encoder/static/css/style.css
@@ -2,3 +2,27 @@ body,form {
     /* padding-left: 15px;*/
      padding: 10px;
  }
+ table {
+    font-size: 14px;
+    border-collapse: collapse;
+    text-align: center;
+    
+    }
+    th {
+    background: #d9d9d9;
+    color: white;
+    
+    }
+    th, td {
+    padding: 20px !important;
+    border-style: solid;
+    border-width: 1px 1px 1px 1px;
+    border-color: white;
+    
+    }
+    td {
+    background: #f2f2f2;
+    }
+    th:first-child, td:first-child {
+    text-align: left;
+    }
