--- a/vkfDjango/templates/base.html
+++ b/vkfDjango/templates/base.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <title>{% block title %} ВКФ-эксперименты {% endblock %}</title>
     </head>
-    <body>
+    <body onload="funonload();">
         {% block content %} {% endblock %}
     </body>
 </html>
