Done: added 2 pages, indaction phase, saving to base experiment information.

--- a/vkfDjango/templates/encoder/create_table.html
+++ b/vkfDjango/templates/encoder/create_table.html
@@ -12,7 +12,7 @@
             <input type="radio" name="sample_type" value="test"> Тестовая </p>
         <p>Целевое свойство: <input type="text" name="sample_attr"></p>
         <p>Имя таблицы: <input type="text" name="sample_table"></p>
-        <p>Выберите кодировщик::</p>
+        <p>Выберите кодировщик:</p>
         {% if filesFor %}
             {% for f in filesFor %}
                 <p>Кодировщик от {{f.file_name}}: 
