added navbar and userpage, added function:delete and update files from main page, changed design

--- a/vkfDjango/templates/encoder/main.html
+++ b/vkfDjango/templates/encoder/main.html
@@ -3,6 +3,7 @@
 {% block title %} Главная {% endblock %}
 
 {% block content %}
+{%  include 'accounts/navbar.html' %}
 
 <form action = "{% url 'encoder:choiceFileFor' %}" enctype="multipart/form-data" method="post">
     {% csrf_token %}
