--- a/vkfDjango/apps/encoder/static/css/style.css
+++ b/vkfDjango/apps/encoder/static/css/style.css
@@ -41,7 +41,7 @@ body,form {
     }
 
     .hello-msg{
-    font-size: 18px;
-    color: #fff;
+    font-size: 16px;
+    color: black;
     margin-right: 20px;
     }
