--- a/vkfDjango/templates/accounts/user.html
+++ b/vkfDjango/templates/accounts/user.html
@@ -1,10 +1,27 @@
 {% extends 'base.html' %}
 
-{% block title %} Главная {% endblock %}
+{% block title %} Профиль {{request.user}} {% endblock %}
 
 {% block content %}
 
-{%  include 'accounts/navbar.html' %}
+   <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'index' %}">Главная<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}">Выйти</a>
+        </li>
+      </ul>
+    </div>
+    <span class="hello-msg">Здравствуйте, {{request.user}}!</span>
+  </nav>
+
 
 <br>
 
@@ -53,7 +70,7 @@
 
 <div class="row">
 	<div class="col-md-12">
-		<h5> ВКФ-эксперименты:</h5>
+		<h5> Мои ВКФ-эксперименты:</h5>
 		<hr>
 		<div class="card card-body">
             <a class="btn btn-primary  btn-sm btn-block" href="{% url 'vkfsys:induction' %}">Создать эксперимент</a>
@@ -68,8 +85,6 @@
                     <th>Имя таблицы с тестовой выборкой</th>
                     <th>Количество положительных примеров</th>
                     <th>Количество негативных примеров</th>
-                    <th>Редактировать</th>
-                    <th>Удалить</th>
 				</tr>
 
 				{% for ex in list_of_exs %}
@@ -82,9 +97,6 @@
                         <td>{{ex.table_test}}</td>
                         <td>{{ex.num_pos}}</td>
                         <td>{{ex.num_neg}}</td>
-                        <td><a class="btn btn-sm btn-info" href="{% url 'update_ex' ex.id %}">Редактировать</a></td>
-
-						<td><a class="btn btn-sm btn-danger" href="{% url 'delete_ex' ex.id %}">Удалить</a></td>
 					</tr>
 				{% endfor %}
 
@@ -94,7 +106,7 @@
 </div>
 <div class="row">
 	<div class="col-md-6">
-		<h5>Файлы</h5>
+		<h5>Мои загруженные файлы</h5>
 		<hr>
 		<div class="card card-body">
 			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'encoder:choiceFileFor' %}">Загрузить файл</a>
@@ -105,7 +117,6 @@
 					<th>Путь к файлу</th>
 					<th>Имя таблицы для кодировщика</th>
                     <th>Имя таблицы для решеток</th>
-                    <th>Редактировать / Удалить</th>
 				</tr>
 				{% for file in list_of_files %}
 					<tr>
@@ -114,11 +125,6 @@
                         <td>{{file.file_path}}</td>
                         <td>{{file.file_tableEncoder}}</td>
                         <td>{{file.file_tableOrderings}}</td>
-						<td>
-							<p><a class="btn btn-sm btn-info" href="{% url 'update_file' file.id %}">Редактировать</a></p>
-							
-							<p><a class="btn btn-sm btn-danger" href="{% url 'delete_file' file.id %}">Удалить</a></p>
-						</td>
 
 					</tr>
 				{% endfor %}
@@ -128,7 +134,7 @@
 		</div>
     </div>
     <div class="col-md-6">
-		<h5>Выборки</h5>
+		<h5>Мои выборки</h5>
 		<hr>
 		<div class="card card-body">
 			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'encoder:create_table' %}">Создать выборку</a>
@@ -140,7 +146,6 @@
 					<th>Целевое свойство</th>
                     <th>Имя таблицы</th>
                     <th>Имя таблицы-кодировщика</th>
-                    <th>Редактировать / Удалить</th>
 				</tr>
 				{% for sample in list_of_samples %}
 					<tr>
@@ -150,11 +155,6 @@
                         <td>{{sample.fileSample_attr}}</td>
                         <td>{{sample.fileSample_table}}</td>
                         <td>{{sample.fileSample_encoder}}</td>
-						<td>
-							<p><a class="btn btn-sm btn-info" href="#">Редактировать</a></p>
-							
-							<p><a class="btn btn-sm btn-danger" href="#">Удалить</a></p>
-						</td>
 
 					</tr>
 				{% endfor %}
