--- a/vkfDjango/templates/accounts/user.html
+++ b/vkfDjango/templates/accounts/user.html
@@ -11,12 +11,14 @@
 
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav">
+		{% if request.user.groups.all.0.name == 'admin' %}
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'index' %}">Главная<span class="sr-only">(current)</span></a>
-        </li>
+		</li>
+		{% endif %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Выйти</a>
-        </li>
+		</li>
       </ul>
     </div>
     <span class="hello-msg">Здравствуйте, {{request.user}}!</span>
@@ -70,7 +72,7 @@
 
 <div class="row">
 	<div class="col-md-12">
-		<h5> Мои ВКФ-эксперименты:</h5>
+		<h5> Мои ВКФ-эксперименты</h5>
 		<hr>
 		<div class="card card-body">
             <a class="btn btn-primary  btn-sm btn-block" href="{% url 'vkfsys:induction' %}">Создать эксперимент</a>
@@ -105,7 +107,7 @@
 	</div>
 </div>
 <div class="row">
-	<div class="col-md-6">
+	<div class="col-md-12">
 		<h5>Мои загруженные файлы</h5>
 		<hr>
 		<div class="card card-body">
@@ -132,8 +134,10 @@
 		
 			</table>
 		</div>
-    </div>
-    <div class="col-md-6">
+	</div>
+</div>
+<div class="row">
+    <div class="col-md-12">
 		<h5>Мои выборки</h5>
 		<hr>
 		<div class="card card-body">
@@ -163,8 +167,6 @@
 			</table>
 		</div>
 	</div>
-
-
 </div>
 
 {% endblock %}
