added new design to vkfsys, fixed error with delete_sample

--- a/vkfDjango/apps/encoder/static/css/modal.css
+++ b/vkfDjango/apps/encoder/static/css/modal.css
@@ -1,4 +1,4 @@
- .modalDialog {
+ /*.modalDialog {
 	position: fixed;
 	font-family: Arial, Helvetica, sans-serif;
 	top: 0;
@@ -48,3 +48,4 @@
 .close:hover { background: #00d9ff; }
 
 
+*/
