--- a/vkfDjango/templates/vkfsys/for_add_hyps.html
+++ b/vkfDjango/templates/vkfsys/for_add_hyps.html
@@ -3,17 +3,35 @@
 {% block title %}  Добавить гипотезы {% endblock %}
 
 {% block content %}
-<form action = "{% url 'vkfsys:add_hyps' ex_id %}" enctype="multipart/form-data" method="post">
-    {% csrf_token %}
-    <h4>Введите количество гипотез:</h4>
-    <input type="number" name="num_hyps" > 
-    <h4>Введите количество потоков:</h4>
-    <input type="number" name="num_thr" >
-    <br> <br> 
-    <button type="submit">Добавить</button>
-</form>
-<form action = "{% url 'vkfsys:ct_return' ex_id %}" enctype="multipart/form-data" method="post">
-{% csrf_token %}
-<button type="submit">Отмена</button>
-</form>
+{%  include 'accounts/navbar.html' %}
+
+<br>
+<div class="container-fluid">
+    <div class="d-flex justify-content-center">
+        <form action = "{% url 'vkfsys:add_hyps' ex_id %}" enctype="multipart/form-data" method="post">
+            {% csrf_token %}
+            <div class="card text-center">
+                <div class="card-header">
+                     Добавить гипотезы
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title"></h5>
+                    <div class="form-group">
+                        <input class="form-control " name="num_hyps" type="number" placeholder="Количество гипотез">
+                        </div>
+                        <div class="form-group">
+                        <input class="form-control " name="num_thr" type="number" placeholder="Количество потоков">
+                        </div>
+                </div>
+                <div class="card-footer text-muted">
+                    <a class="btn btn-secondary" href="{% url 'vkfsys:ct_return' ex_id %}">Отмена</a>
+                    <button class="btn btn-secondary" type="submit">ОК
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+</div>
+
 {% endblock %}
